[workspace]
resolver = "2"
members = ["rust_decouple_derive"]

[package]
name = "rust-decouple"
description = "A simple library to ease the process of parsing environment variables"
readme = "README.md"
license = "MIT"
keywords = ["config"]
authors = ["joyanedel <iamjoyanedel@gmail.com>"]
repository = "https://github.com/joyanedel/rust-decouple"
version = "0.1.2"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
rust_decouple_derive = { path = "rust_decouple_derive", optional = true }

[features]
default = []
derive = ["dep:rust_decouple_derive"]
