[package]
name = "rust_decouple_derive"
authors = ["joyanedel <iamjoyanedel@gmail.com"]
description = "A simple library to ease the process of parsing environment variables subcrate"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"

[lib]
proc-macro = true
